--- a/Web/Partials/ToolkitContent.html
+++ b/Web/Partials/ToolkitContent.html
@@ -64,10 +64,10 @@
                             <div class="row">
                                 <div class="col-md-9 col-sm-8 col-xs-8">
                                     <h3><a href="">{{ToolkitList.toolkitName}}</a></h3>
-                                    <div class="meta">
+                                    <!--<div class="meta">
                                         <span><a href="#">Start Date</a> : {{ToolkitList.startDate}}</span>
                                         <span><a href="#">End Date</a> : {{ToolkitList.endDate}}</span>
-                                    </div>
+                                    </div>-->
                                 </div>
                                 <div class="col-md-3 col-sm-4 price">{{ToolkitList.currencyType}} {{ToolkitList.price}}</div>
                             </div>
@@ -116,8 +116,8 @@
                                         <a href="">Currency</a>
                                         <select style class="form-control" data-ng-model="ToolkitList.currencyType">
                                             <option value="1">INR</option>
-                                            <option value="2">Dollar</option>
-                                            <option value="3">Euro</option>
+                                            <!--<option value="2">Dollar</option>
+                                            <option value="3">Euro</option>-->
                                         </select>
                                     </p>
 
@@ -127,7 +127,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row" style="margin-bottom: 15px;">
+                            <!--<div class="row" style="margin-bottom: 15px;">
                                 <p>
                                     <div class="col-sm-2">
                                         <a href="">Start Date</a>
@@ -141,7 +141,7 @@
                                         <input type="text" autoclose data-date-format="dd/mm/yyyy" class="datepicker" data-ng-model="ToolkitList.endDate" />
                                     </div>
                                 </p>
-                            </div>
+                            </div>-->
                             <div class="row">
                                 <div class="col-sm-12">
                                     <p>
